fix: nhiều lỗi